# python-web_hw_06

./: README.md  create_db.py  hw_06.db  make_query.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
tools/: create_db.py  create_hw_06_db.sql  seeds.py
