[tool.poetry]
name = "python-web-hw-06"
version = "0.1.0"
description = "SQL db requests"
authors = ["Vadim Marenko <vadim.marenko@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "python_web_hw_06"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
